# snapflow

./: .commitlintrc.json  .deepsource.toml  .dockerignore  .gitignore  .licenserc-clients.yaml  .licenserc.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  biome.json  components.json  docker-compose.yml  entrypoint.sh  go.work  go.work.sum  justfile  migration.md  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.json  tsconfig.base.json  tsconfig.json  turbo.json
crates/api/: Cargo.toml  Dockerfile  docker-compose.yml
crates/api/migrations/: 20260321000000_initial_schema.sql
crates/api/src/: bootstrap.rs  config.rs  constants.rs  events.rs  executor.rs  extractors.rs  handlers.rs  infra.rs  jobs.rs  lib.rs  mail.rs  main.rs  middleware.rs  models.rs  realtime.rs  repositories.rs  routes.rs  schemas.rs  services.rs  state.rs  utils.rs
crates/api/src/config/: database.rs  default_executor.rs  executor_usage.rs  log.rs  proxy.rs  quota.rs  r2.rs  redis.rs  registry.rs  smtp.rs
crates/api/src/constants/: auth.rs  billing.rs  bucket.rs  executor.rs  infra.rs  lock_keys.rs  lock_ttls.rs  org.rs  pagination.rs  permissions.rs  providers.rs  registry.rs  sandbox.rs  schedules.rs
crates/api/src/executor/: adapter.rs  client.rs
crates/api/src/extractors/: auth.rs  image.rs  organization.rs  pagination.rs  registry.rs  sandbox.rs  validated_json.rs
crates/api/src/handlers/: api_key.rs  auth.rs  billing.rs  bucket.rs  executor.rs  health.rs  image.rs  log_proxy.rs  oauth.rs  organization.rs  preview.rs  registry.rs  sandbox.rs  storage.rs
crates/api/src/infra/: database.rs  docker.rs  lock.rs  pending_usage.rs  redis.rs
crates/api/src/jobs/: auth.rs  backup.rs  billing.rs  bucket.rs  executor.rs  image.rs  organization.rs  sandbox.rs  usage.rs  warm_pool.rs
crates/api/src/mail/: client.rs  templates.rs
crates/api/src/middleware/: auth.rs  csrf.rs  maintenance.rs  rate_limit.rs
crates/api/src/models/: account.rs  api_key.rs  bucket.rs  build_info.rs  executor.rs  image.rs  image_executor.rs  organization.rs  organization_invitation.rs  organization_role.rs  organization_user.rs  refresh_token.rs  registry.rs  sandbox.rs  usage.rs  user.rs  verification.rs  wallet_transaction.rs  warm_pool.rs
crates/api/src/realtime/: emitter.rs  gateway.rs
crates/api/src/repositories/: account.rs  api_key.rs  billing.rs  bucket.rs  build_info.rs  executor.rs  image.rs  oauth_code.rs  organization.rs  organization_invitation.rs  organization_role.rs  organization_user.rs  refresh_token.rs  registry.rs  sandbox.rs  usage.rs  user.rs  verification.rs  warm_pool.rs
crates/api/src/routes/: api_key.rs  auth.rs  billing.rs  bucket.rs  executor.rs  health.rs  image.rs  oauth.rs  organization.rs  preview.rs  registry.rs  sandbox.rs  storage.rs
crates/api/src/schemas/: api_key.rs  auth.rs  billing.rs  organization.rs  registry.rs  sandbox.rs  storage.rs
crates/api/src/schemas/api_key/: api_key_response.rs  create_api_key.rs
crates/api/src/schemas/auth/: auth_response.rs  change_password.rs  forgot_password.rs  message.rs  refresh_token.rs  reset_password.rs  send_verification_email.rs  sign_in.rs  sign_up.rs  update_user.rs  user_response.rs  verify_email.rs
crates/api/src/schemas/organization/: create_organization.rs  organization_invitation.rs  organization_response.rs  organization_role.rs  organization_suspension.rs  organization_user.rs  overview.rs  update_quota.rs
crates/api/src/schemas/registry/: create_registry.rs  registry_push_access.rs  registry_response.rs  update_registry.rs
crates/api/src/schemas/sandbox/: bucket.rs  build_info.rs  executor.rs  (+8 more)
crates/api/src/services/: api_key.rs  auth.rs  backup.rs  bucket.rs  executor.rs  image.rs  oauth.rs  organization.rs  organization_invitation.rs  organization_role.rs  organization_user.rs  preview.rs  registry.rs  sandbox.rs  sandbox_actions.rs  sandbox_archive_action.rs  sandbox_destroy_action.rs  sandbox_resize_action.rs  sandbox_start_action.rs  sandbox_stop_action.rs  storage.rs  usage.rs  user.rs  warm_pool.rs
crates/api/src/utils/: cookies.rs
crates/api/templates/: base.html  password_reset.html  verification.html
crates/auth/: Cargo.toml
crates/auth/src/: hmac_cookie.rs  jwks.rs  jwt.rs  lib.rs
crates/common/: Cargo.toml
crates/common/src/: cache.rs  constants.rs  lib.rs  middleware.rs  proxy.rs
crates/common/src/cache/: memory.rs  redis.rs
crates/common/src/middleware/: rate_limit.rs  request_id.rs  version_header.rs
crates/errors/: Cargo.toml
crates/errors/src/: lib.rs
crates/executor/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
crates/executor/src/: api.rs  cache.rs  config.rs  constants.rs  docker.rs  main.rs  models.rs  netrules.rs  node.rs  openapi.rs  services.rs  storage.rs  sync.rs
crates/executor/src/api/: controllers.rs  dto.rs  errors.rs  middleware.rs
crates/executor/src/docker/: backup.rs  bucket.rs  commit.rs  config.rs  create.rs  destroy.rs  exec.rs  image.rs  monitor.rs  node.rs  resize.rs  start.rs  state.rs  stop.rs
crates/executor/src/services/: metrics.rs  sandbox.rs
crates/executor/src/storage/: r2.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs
crates/node/: Cargo.toml
crates/node/scripts/: download-xterm.sh
crates/node/src/: common.rs  computer.rs  config.rs  main.rs  network.rs  openapi.rs  ssh.rs  terminal.rs  toolbox.rs
crates/node/src/common/: errors.rs  shell.rs
crates/node/src/computer/: display.rs  keyboard.rs  mouse.rs  routes.rs  screenshot.rs
crates/node/src/network/: dns.rs  http_proxy.rs  store.rs  tls.rs  types.rs
crates/node/src/ssh/: forward.rs  session.rs  sftp.rs
crates/node/src/terminal/: assets.rs
crates/node/src/toolbox/: fs.rs  git.rs  lsp.rs  network.rs  port.rs  process.rs  proxy.rs  session.rs
crates/proxy/: Cargo.toml  Dockerfile  docker-compose.yml
crates/proxy/src/: auth.rs  config.rs  lib.rs  main.rs  middleware.rs  routes.rs  state.rs
crates/proxy/src/routes/: callback.rs  health.rs  proxy.rs  warning.rs
(+1890 files in other folders)
