[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { workspace = true, features = ["macros"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["timeout", "fs", "normalize-path"] }
hyper = { workspace = true }
hyper-util = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration
envconfig = { workspace = true }
dotenvy = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }

# Data structures
cookie = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# OpenAPI and validation
utoipa = { workspace = true, features = ["chrono", "uuid"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
validator = { workspace = true }

# Docker
bollard = { workspace = true }

# AWS
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }

# Cryptography
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = "0.5"
rand = "0.9"
p256 = { version = "0.13", features = ["pem", "pkcs8"] }

# HTTP client
reqwest = { workspace = true, features = ["stream"] }

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
askama = "0.13"

# Scheduling and rate limiting
tokio-cron-scheduler = { version = "0.15.1", features = ["signal"] }
governor = { version = "0.10", features = ["dashmap", "std"] }
backon = "1"

# Realtime
socketioxide = { version = "0.18.2", features = ["state"] }

# Caching
redis = { workspace = true, features = ["connection-manager"] }

# CLI
clap = { version = "4", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }

# Internal crates
common-rs = { workspace = true, features = ["redis", "rate-limit"] }
snapflow-models = { workspace = true, features = ["sqlx", "strum", "utoipa"] }
snapflow-errors = { workspace = true, features = ["sqlx", "validator", "utoipa"] }
snapflow-auth = { workspace = true }
snapflow-storage = { workspace = true }
snapflow-executor-client = { workspace = true }
