[package]
name = "snapflow-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
# JWT
jsonwebtoken = { workspace = true }
p256 = { version = "0.13", features = ["pem", "pkcs8"] }
base64 = { workspace = true }

# HMAC cookie signing
hmac = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }

# Internal crates
snapflow-models = { workspace = true }
