[package]
name = "snapflow-errors"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Optional integrations
sqlx = { version = "0.8", optional = true }
validator = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[features]
default = []
sqlx = ["dep:sqlx"]
validator = ["dep:validator"]
utoipa = ["dep:utoipa"]
reqwest = ["dep:reqwest"]
