[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7"
rand = { workspace = true }


# Configuration
envconfig = { workspace = true }
dotenvy = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }

# Data structures
dashmap = { workspace = true }
url = { workspace = true }
cookie = { workspace = true }
base64 = { workspace = true }

# Cryptography
sha2 = { workspace = true }
hex = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# User agent parsing
woothee = "0.13"

redis = { workspace = true, features = ["connection-manager"] }

# Internal crates
common-rs = { workspace = true, features = ["redis"] }
snapflow-auth = { workspace = true }
snapflow-api-client = { workspace = true }
